position fixed for nav button on mobile

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -126,6 +126,7 @@
       opacity: 1;
       position: static;
       display: none;
+      margin: 0 2rem 0 0;
 
       &--mobile {
         display: block;
